--- a/examen2/src/app/entrenador/entrenador.component.html
+++ b/examen2/src/app/entrenador/entrenador.component.html
@@ -3,7 +3,15 @@
   <a *ngFor="let entrenador of entrenadores" class="col-1-4"
       >
     <div class="module hero">
-      <h4>{{entrenador.name}}</h4>
+      <h4>{{entrenador.nombre}}</h4>
+      <div class="grid grid-pad">
+        <a *ngFor="let pokemon of entrenador.pokemons" class="col-1-4"
+            >
+          <div class="module hero">
+            <h4>{{pokemon.nombrePokemon}}</h4>
+          </div>
+        </a>
+      </div>
     </div>
   </a>
 </div>
