componente boton buscador y diseño

--- a/examen2/src/app/entrenador/entrenador.component.html
+++ b/examen2/src/app/entrenador/entrenador.component.html
@@ -6,6 +6,7 @@
   <a *ngFor="let entrenador of entrenadores" class="col-1-4">
     <div class="module hero">
       <br />
+      <app-boton-cargar-mas></app-boton-cargar-mas>
       <br />
       <h4>{{entrenador.nombre}}</h4>
       <div class="grid grid-pad">
@@ -15,6 +16,7 @@
           </div>
         </a>
       </div>
+      <app-boton-cargar-mas></app-boton-cargar-mas>
     </div>
   </a>
 </div>
